// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> when centered matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
        justify-content: center;
      }
>
  <StyledCustomizedSpinner
    className=

        & > .ms-Spinner-circle {
          border-top-color: #386cbb;
          border: 2px solid rgba(56, 108, 187, 0.3);
        }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 8px;
          margin-right: 0;
          margin-top: -2px;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with additional className matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    className=

        & > .ms-Spinner-circle {
          border-top-color: #386cbb;
          border: 2px solid rgba(56, 108, 187, 0.3);
        }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 8px;
          margin-right: 0;
          margin-top: -2px;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with dark color matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    className=

        & > .ms-Spinner-circle {
          border-top-color: #ffffff;
          border: 2px solid rgba(255, 255, 255, 0.3);
        }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 8px;
          margin-right: 0;
          margin-top: -2px;
        }
    color="white"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with invisible text matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    className=

        & > .ms-Spinner-circle {
          border-top-color: #386cbb;
          border: 2px solid rgba(56, 108, 187, 0.3);
        }
  />
  <ScreenreaderText>
    Loading
  </ScreenreaderText>
</div>
`;

exports[`<Spinner /> with large size matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: column;
      }
>
  <StyledCustomizedSpinner
    className=

        & > .ms-Spinner-circle {
          border-top-color: #386cbb;
          border: 2px solid rgba(56, 108, 187, 0.3);
        }
    size={3}
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 4px;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with metadata color matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    className=

        & > .ms-Spinner-circle {
          border-top-color: #386cbb;
          border: 2px solid rgba(56, 108, 187, 0.3);
        }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 8px;
          margin-right: 0;
          margin-top: -2px;
        }
    color="metadata"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with small size matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    className=

        & > .ms-Spinner-circle {
          border-top-color: #386cbb;
          border: 2px solid rgba(56, 108, 187, 0.3);
        }
    size={0}
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 6px;
          margin-right: 0;
          margin-top: -1px;
        }
    color="primary"
    size="small"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with visible text matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    className=

        & > .ms-Spinner-circle {
          border-top-color: #386cbb;
          border: 2px solid rgba(56, 108, 187, 0.3);
        }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 8px;
          margin-right: 0;
          margin-top: -2px;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;
